--- a/CrashTest/CrashTest.vcxproj
+++ b/CrashTest/CrashTest.vcxproj
@@ -109,6 +109,7 @@
     </ClInclude>
     <ClInclude Include="NumericMethod.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="RungeKuttaMethod.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="TaskKoshi.h" />
   </ItemGroup>
