--- a/CrashTest/CrashTest.vcxproj.filters
+++ b/CrashTest/CrashTest.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClInclude Include="BuilderDU.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="RungeKuttaMethod.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc">
